# pytorch

./: .flake8  .gitignore  .gitmodules  .lintrunner.toml  CLAUDE.md  CMakeLists.txt  COMPATIBILITY.md  CONTRIBUTING.md  CONTRIBUTING.zh.md  LICENSE  NPU_TEST_SHARD_STRATEGY.md  OWNERS  README.en.md  README.md  README.zh.md  SECURITYNOTE.en.md  SECURITYNOTE.md  SUPPORT.md  TODO_npu_full_test_shard_runtime.md  Third_Party_Open_Source_Software_Notice  Third_Party_Open_Source_Software_Notice.md  access_control_test.py  benchmark_write_performance.py  build_libtorch_npu.py  env.sh  generate_code.sh  pyproject.toml  pyrefly.toml  requirements.txt  setup.cfg  setup.py  tatus  triton_version.txt  version.txt
ci/: build.sh  (+5 more)
examples/libtorch_hccl/: CMakeLists.txt  README_HCCL.md  allreduce_hccl.cpp  libtorch_hccl.sh
examples/libtorch_npu/: CMakeLists.txt  inference_model.cpp  trace_model.py
examples/libtorch_resnet/: CMakeLists.txt  libtorch_resnet.cpp  resnet_trace.py
examples/libtorch_triton_ascend/examples/: CMakeLists.txt  demo.cpp  my_kernels.py  run_demo.sh
examples/libtorch_triton_ascend/triton_runtime/: CMakeLists.txt  build.sh
examples/libtorch_triton_ascend/triton_runtime/include/: arg_info.h  grid.h  kernel_cache.h  kernel_compiler.h  kernel_registry.h  logging.h  python_env.h  status.h  triton_runtime.h
examples/libtorch_triton_ascend/triton_runtime/src/: arg_info.cpp  kernel_cache.cpp  kernel_compiler.cpp  kernel_registry.cpp  python_env.cpp  triton_runtime.cpp
pytorch1.5.0/src/c10/npu/: CMakeLists.txt  NPUAny.h  NPUCachingAllocator.cpp  NPUCachingAllocator.h  NPUEvent.h  NPUEventManager.cpp  NPUEventManager.h  NPUException.h  NPUFunctions.h  NPUGraph.cpp  NPUGraph.h  NPUGraphContextManager.cpp  NPUGraphContextManager.h  NPUHashUtils.h  NPUMacros.h  NPUQueue.cpp  NPUQueue.h  NPURunMode.cpp  NPURunMode.h  NPUStream.cpp  NPUStream.h  OptionsManager.cpp  OptionsManager.h  SecondaryStreamGuard.h  npu_log.h
pytorch1.5.0/src/c10/npu/impl/: NPUGuardImpl.h
pytorch1.5.0/src/c10/npu/interface/: AclInterface.cpp  AclInterface.h  AclTdtInterface.cpp  AclTdtInterface.h  AsyncTaskQueueInterface.cpp  AsyncTaskQueueInterface.h  HcclInterface.h
pytorch1.5.0/src/c10/npu/register/: FunctionLoader.cpp  FunctionLoader.h  OptionRegister.h
pytorch1.5.0/src/c10/npu/sys_ctrl/: npu_sys_ctrl.cpp  npu_sys_ctrl.h
pytorch1.5.0/src/c10/npu/tools/: NPUTdtChannel.cpp  NPUTdtChannel.h  NPUTdtChannelQueue.cpp  NPUTdtChannelQueue.h  NPUTdtDataset.h
src/aten/src/THNPU/: CMakeLists.txt  THNPUCachingHostAllocator.cpp
torch_npu/csrc/aten/: AutoCastOps.cpp  BinaryOps.cpp  CMakeLists.txt  CustomFunctions.cpp  CustomFunctions.h  CustomOpsRegisterFunctionalization.cpp  NPUGeneratorImpl.cpp  NPUGeneratorImpl.h  OverrideOperators.cpp  OverrideOperators.h  PinMemory.cpp  RegisterSparseNPU.cpp  VariableFallbackKernel.cpp  aten_foreach_ops.h  npu_native_functions.yaml
torch_npu/csrc/aten/bscpp_ops/: AddKernel.cpp  CMakeLists.txt
torch_npu/csrc/aten/common/: ChangeDataPtr.cpp  ComplexKernel.cpp  CopyKernel.cpp  CopyKernelNpu.cpp  CopyMemoryKernel.cpp  DLConvertor.cpp  DLConvertor.h  EmptyTensor.cpp  FormatCastHelper.cpp  FormatCastHelper.h  FormatCastKernelNpu.cpp  InnerNpuNativeFunction.h  LocalScalarDenseNpu.cpp  MatmulByBmmV2KernelNpu.cpp  NpuFastReshape.cpp  PeerToPeerAccess.cpp  PeerToPeerAccess.h  PinnedMemoryAllocator.cpp  ResizeNpu.cpp  ResizeNpu.h  SetNpu.cpp  SetNpu.h  StorageSizeNpu.cpp  TensorCompare.cpp  TensorConversions.cpp  TensorFactories.cpp  TensorFactories.h  TensorProperties.cpp  TensorShape.cpp  ToKernelNpu.cpp  from_blob.cpp  from_blob.h
torch_npu/csrc/aten/mirror/: NPUMemoryOverlap.cpp  NPUMemoryOverlap.h  NPUTensorIterator.cpp  NPUTensorIterator.h  NPUTypeProperties.cpp  NPUTypeProperties.h
torch_npu/csrc/aten/ops/: AbsKernelNpu.cpp  AcosKernelNpu.cpp  AcoshKernelNpu.cpp  AddKernelNpu.cpp  AddReluKernelNpu.cpp  AddbmmKernelNpu.cpp  AddcdivKernelNpu.cpp  AddcmulKernelNpu.cpp  AddmmKernelNpu.cpp  AddmvKernelNpu.cpp  AddrKernelNpu.cpp  AffineGridGeneratorBackwardKernelNpu.cpp  AffineGridGeneratorKernelNpu.cpp  AllKernelNpu.cpp  AmpForeachNonFiniteCheckAndUnscaleKernelNpu.cpp  AnchorResponseFlagsKernelNpu.cpp  AnyKernelNpu.cpp  ApplyAdamKernelNpu.cpp  ApplyAdamWKernelNpu.cpp  ArangeKernelNpu.cpp  ArgmaxKernelNpu.cpp  ArgminKernelNpu.cpp  ArgsortKernelNpu.cpp  AsStridedKernelNpu.cpp  AsinKernelNpu.cpp  AsinhKernelNpu.cpp  Atan2KernelNpu.cpp  AtanKernelNpu.cpp  AtanhKernelNpu.cpp  BaddbmmKernelNpu.cpp  BatchNMSKernelNpu.cpp  BernoulliKernelNpu.cpp  BertApplyAdamKernelNpu.cpp  BinaryCrossEntropyBackwardKernelNpu.cpp  BinaryCrossEntropyKernelNpu.cpp  BinaryCrossEntropyWithLogitsBackwardKernelNpu.cpp  BinaryCrossEntropyWithLogitsKernelNpu.cpp  BincountKernelNpu.cpp  BitwiseAndKernelNpu.cpp  BitwiseNotKernelNpu.cpp  (+353 more)
torch_npu/csrc/aten/ops/convolution/: Conv2dBackwardKernelNpu.cpp  Conv2dKernelNpu.cpp  Conv3dBackwardKernelNpu.cpp  Conv3dKernelNpu.cpp  ConvDepthWise2dBackwardKernelNpu.cpp  ConvDepthWise2dKernelNpu.cpp  ConvDepthwise2dBackwardKernelNpu.cpp  ConvTbcBackwardKernelNpu.cpp  ConvTranspose2dBackwardKernelNpu.cpp  ConvTranspose2dKernelNpu.cpp  ConvTranspose3dBackwardKernelNpu.cpp  ConvolutionKernelNpu.cpp  ConvtbcKernelNpu.cpp  ThnnConvDepthwise2dBackwardKernelNpu.cpp  ThnnConvDepthwise2dForwardKernelNpu.cpp
torch_npu/csrc/aten/ops/hcom/: HcomAllGatherKernelNpu.cpp  HcomAllReduceKernelNpu.cpp
torch_npu/csrc/aten/ops/loss/: L1LossBackwardKernelNpu.cpp  L1LossKernelNpu.cpp  LossKernelNpu.cpp  MultilabelMarginLossKernelNpu.cpp  NLLLoss2dBackwardKernelNpu.cpp  NLLLoss2dKernelNpu.cpp  NLLLossBackwardKernelNpu.cpp  NLLLossKernelNpu.cpp  SmoothL1LossBackwardKernelNpu.cpp  SmoothL1LossKernelNpu.cpp  SoftMarginLossBackwardKernelNpu.cpp  SoftMarginLossKernelNpu.cpp
torch_npu/csrc/aten/ops/normalization/: BatchNormBackwardElemtKernelNpu.cpp  BatchNormBackwardKernelNpu.cpp  BatchNormBackwardReduceKernelNpu.cpp  BatchNormElemtKernelNpu.cpp  BatchNormGatherStatsUpdateKernelNpu.cpp  BatchNormGatherStatsWithCountsKernelNpu.cpp  (+4 more)
torch_npu/csrc/toolkit/profiler/: CMakeLists.txt
(+9467 files in other folders)
