set(ATen_NPU_INCLUDE ${ATen_NPU_INCLUDE}
  "${CMAKE_CURRENT_BINARY_DIR}"
  "${CMAKE_CURRENT_SOURCE_DIR}"
PARENT_SCOPE)


set(ATen_NPU_SRCS ${ATen_NPU_SRCS}
  ${CMAKE_CURRENT_SOURCE_DIR}/THNPUCachingHostAllocator.cpp
  PARENT_SCOPE)

INSTALL(FILES
          THNPU.h
          THNPUCachingHostAllocator.h
          DESTINATION "${ATEN_INSTALL_INCLUDE_SUBDIR}/THNPU")